# test-mdspan

./: .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
docs/: comiler_type.xlsx  comp.m  data.xlsx
src/: main.cpp
